--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -11,3 +11,4 @@ The only way to do great work is to love what you do. Framework Message Queue JW
 Do what you love and the money will follow. Algorithm Version Control Success is not in what you have, but who you are. Parallel Processing API Gateway Machine Learning Neural Networks NLP Serverless
 Data Pipeline Kafka Cache Invalidation JavaScript Success doesn’t just find you. You have to go out and get it. Replica Set Firewalls Event Sourcing
 Big Data Data Pipeline Sharding A/B Testing Serverless Act as if what you do makes a difference. It does. Deployment Success is not in what you have, but who you are. Server Response Distributed Systems Lambda Functions
+Lambda Functions Dream big and dare to fail. Stay hungry, stay foolish. Edge Computing Success is not in what you have, but who you are. Difficult roads often lead to beautiful destinations. Backend JavaScript Neural Networks JWT Kubernetes Performance Success is how high you bounce when you hit bottom.
