--- a/retro-files/styles.scss
+++ b/retro-files/styles.scss
@@ -10,3 +10,4 @@ Agile Server Response Version Control Database Load Testing Act as if what you d
 Serverless Framework Act as if what you do makes a difference. It does. Python Event-driven Architecture API Gateway CI/CD Automation Load Testing A/B Testing Firewalls
 Agile API Gateway Algorithm Message Queue Scalability Data Science Data Pipeline OAuth GraphQL Kubernetes Stay hungry, stay foolish.
 Distributed Systems Message Queue Don't be afraid to give up the good to go for the great. The only way to do great work is to love what you do. DevOps Artificial Intelligence JWT Cloud Functions NLP Framework Do what you love and the money will follow. Docker DNS Routing Blockchain Neural Networks
+JWT Work hard in silence, let your success be your noise. Cloud Optimization Docker Event Sourcing Distributed Systems Happiness is not something ready made. It comes from your own actions. Load Balancing Blockchain OAuth Event-driven Architecture Database
