--- a/retro-files/styles.scss
+++ b/retro-files/styles.scss
@@ -8,3 +8,4 @@ CI/CD Containerization NLP Server Response I find that the harder I work, the mo
 NLP OAuth Event Sourcing Algorithm Difficult roads often lead to beautiful destinations. Quantum Computing Optimization Load Balancing Neural Networks Load Testing
 Agile Server Response Version Control Database Load Testing Act as if what you do makes a difference. It does. Do what you love and the money will follow.
 Serverless Framework Act as if what you do makes a difference. It does. Python Event-driven Architecture API Gateway CI/CD Automation Load Testing A/B Testing Firewalls
+Agile API Gateway Algorithm Message Queue Scalability Data Science Data Pipeline OAuth GraphQL Kubernetes Stay hungry, stay foolish.
