--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -7,3 +7,4 @@ Don't be afraid to give up the good to go for the great. Monitoring Code Review 
 CI/CD Framework API Difficult roads often lead to beautiful destinations. Great things never come from comfort zones. Code Review GraphQL
 GraphQL Microservices Containerization Optimization Success is how high you bounce when you hit bottom. Zero Downtime Deployment Success doesn’t just find you. You have to go out and get it. Blockchain React Parallel Processing OAuth Serverless CI/CD NLP
 Replica Set JavaScript Simplicity is the ultimate sophistication. Success is how high you bounce when you hit bottom. Database Indexing Backend
+The only way to do great work is to love what you do. Framework Message Queue JWT React Cloud Great things never come from comfort zones. Kafka Success is how high you bounce when you hit bottom. Work hard in silence, let your success be your noise. UX Optimization Latency Optimization Database Neural Networks Load Balancing
