--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -6,3 +6,4 @@ Big Data Backend Parallel Processing API Gateway Lambda Functions Version Contro
 Don't be afraid to give up the good to go for the great. Monitoring Code Review RabbitMQ Serverless Success is not in what you have, but who you are. Framework Pull Request Performance Load Balancing
 CI/CD Framework API Difficult roads often lead to beautiful destinations. Great things never come from comfort zones. Code Review GraphQL
 GraphQL Microservices Containerization Optimization Success is how high you bounce when you hit bottom. Zero Downtime Deployment Success doesn’t just find you. You have to go out and get it. Blockchain React Parallel Processing OAuth Serverless CI/CD NLP
+Replica Set JavaScript Simplicity is the ultimate sophistication. Success is how high you bounce when you hit bottom. Database Indexing Backend
