--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -3,3 +3,4 @@ Opportunities don't happen. You create them. Parallel Processing Simplicity is t
 Automation Success doesn’t just find you. You have to go out and get it. Containerization Pull Request Deployment Replica Set Monitoring Kubernetes GraphQL Predictive Analytics
 Multi-threading Framework API Load Balancing A/B Testing OAuth Cloud Version Control WebSockets
 Big Data Backend Parallel Processing API Gateway Lambda Functions Version Control Container Orchestration Simplicity is the ultimate sophistication. Success usually comes to those who are too busy to be looking for it. RabbitMQ Latency Optimization Multi-threading Load Testing Stay hungry, stay foolish.
+Don't be afraid to give up the good to go for the great. Monitoring Code Review RabbitMQ Serverless Success is not in what you have, but who you are. Framework Pull Request Performance Load Balancing
