--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -1,3 +1,4 @@
 Do what you love and the money will follow. Machine Learning Kubernetes Success usually comes to those who are too busy to be looking for it. Opportunities don't happen. You create them. Virtual Machines
 Opportunities don't happen. You create them. Parallel Processing Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. React Database Indexing Lambda Functions
 Automation Success doesn’t just find you. You have to go out and get it. Containerization Pull Request Deployment Replica Set Monitoring Kubernetes GraphQL Predictive Analytics
+Multi-threading Framework API Load Balancing A/B Testing OAuth Cloud Version Control WebSockets
