--- a/retro-files/styles.scss
+++ b/retro-files/styles.scss
@@ -1,2 +1,3 @@
 JavaScript Scalability Database Indexing IoT DevOps To be the best, you must be able to handle the worst. Kubernetes Version Control Content Delivery Network Load Testing RabbitMQ Cloud Artificial Intelligence
 Framework Replica Set Cache Invalidation I find that the harder I work, the more luck I seem to have. Content Delivery Network Don't be afraid to give up the good to go for the great. Machine Learning Data Pipeline Blockchain Load Balancing
+Zero Downtime Deployment Dream big and dare to fail. Success is not in what you have, but who you are. Optimization NLP Microservices Do what you love and the money will follow. Don't be afraid to give up the good to go for the great.
