--- a/retro-files/styles.css
+++ b/retro-files/styles.css
@@ -1,1 +1,2 @@
 Do what you love and the money will follow. Machine Learning Kubernetes Success usually comes to those who are too busy to be looking for it. Opportunities don't happen. You create them. Virtual Machines
+Opportunities don't happen. You create them. Parallel Processing Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. React Database Indexing Lambda Functions
