--- a/retro-files/styles.scss
+++ b/retro-files/styles.scss
@@ -1,1 +1,2 @@
 JavaScript Scalability Database Indexing IoT DevOps To be the best, you must be able to handle the worst. Kubernetes Version Control Content Delivery Network Load Testing RabbitMQ Cloud Artificial Intelligence
+Framework Replica Set Cache Invalidation I find that the harder I work, the more luck I seem to have. Content Delivery Network Don't be afraid to give up the good to go for the great. Machine Learning Data Pipeline Blockchain Load Balancing
